--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
     "name": "Auto Filter Bot V2",
-    "description": "A Filter Bot Which Doesnt Need Manuall Filter Adding",
-    "logo": "https://telegra.ph/file/667e15c821117633d07bd.png",
+    "description": "Powered By PrimeFlix",
+    "logo": "https://telegra.ph/file/006b495ac45d719475706.jpg",
     "keywords": [
         "Auto",
         "Filter",
         "Mongo DB"
     ],
     "website": "https://github.com/AlbertEinsteinTG",
-    "repository": "https://github.com/AlbertEinsteinTG/Adv-Auto-Filter-Bot-V2",
-    "success_url": "https://telegram.dog/CrazyBotsz",
+    "repository": "https://github.com/AaGath/tokyob",
+    "success_url": "https://telegram.dog/Aagath_Ser",
     "env": {
         "APP_ID": {
             "description": "Your APP ID From my.telegram.org or @UseTGXBot",
